v 0.9.9.2 (5 oct)

(Particle) accelerators
Dimensional Physics
Celestial Mechanics
Energy Rifts

Government (wip)

v 0.9.8.2 (2 oct)

Changes by xranti:
___

    The game will now render when new buildings are unlocked (http://redd.it/2hnj5z)
    Removed render hacks from gather and refine catnip buttons (see above fix)
    Fixed Super Unethical Climax achievement
    Added bio lab bonus to the refine catnip button
    Fixed coal rate display with Steel Plants upgrade (http://redd.it/2hh7it)
    Hide 0 effects in building tooltips
    Prevent crafting blueprints before researching physics (http://redd.it/2h4s74)
    Preserve active astronomical events when clearing the log (http://redd.it/2hysk9)
    Added x25 and x100 trade links (http://redd.it/2hd29d)
    Fixed bug causing the game to crash when all your kittens die (issue #9)
    Fixed transcendence save loading issues
    
	Fixed wood refine ratio in iron will mode

<333

v 0.9.8.0 (1 oct)

Transcendence
Fixed Stained Glass not giving correct bonuses to faith

v 0.9.7.0 (26 sep)

More accurate resource tooltips
Slighlty reduced save footprint


v 0.9.6.9 (25 sep)

Changes by Zusias:

Fixed smelter coal incorrectly getting double bonus from paragons/magnetos
___
Rows in the craft table will be now highlighted
Wood refinement in IW will be now affected by Saw Mills
Zebras will now have a 25% chance to bring a gold from a hunt if Golden Ore is researched

v 0.9.6.8 (20 sep)

Slightly reduced gear prices of Steamworks and SW upgrades.
Sligtly reduced blueprint prices of pre-electronics  technologies.
Buffed Bio Lab effect to 10%

Village jobs can now display /sec values.
Fixed incorrect "+" values for blueprints and wood

v 0.9.6.7 (19 sep)

Changes by xranti:

Max resource values now load correctly after importing a save, so resources aren't lost for being over the cap (http://redd.it/2e75ms)