@@ -420,6 +420,7 @@
 						Dimensional Physics
 						Celestial Mechanics
 						Energy Rifts
+						Nuclear Smelters
 						Government
 						
 					Rev: 2
